--- a/templates/upload.html
+++ b/templates/upload.html
@@ -64,7 +64,7 @@
         }
 
         // Wywołanie funkcji tworzącej balony
-        createBalloons();
+      //  createBalloons();
 
         // Funkcja do tworzenia efektu parady
         function createParadeEffect() {
